tests/good/class_instance_is_instance_of.rat
/// exit: 0
class T { def new(self) {} }
assert T() == T
