tests/bad/class_function_without_self.rat
/// fail: Class method must include 'self' as first argument

class Test {
    def new() {}
}
